# ChangeLog for app-emacs/quack
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/quack/ChangeLog,v 1.13 2009/01/29 07:22:39 fauli Exp $

  29 Jan 2009; Christian Faulhammer <fauli@gentoo.org>
  -files/70quack-gentoo.el, -quack-0.29.ebuild:
  clean up

  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> quack-0.30.ebuild:
  Do not assign SIMPLE_ELISP since elisp.eclass now detects this case
  automatically.

*quack-0.30 (07 Nov 2007)

  07 Nov 2007; Ulrich Mueller <ulm@gentoo.org> +files/50quack-gentoo.el,
  +quack-0.30.ebuild:
  Version bump. New site-init file using autoload.

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -quack-0.28.ebuild:
  clean up

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org> quack-0.29.ebuild:
  remove unneeded dependency on w3m; thanks to P.L.Hayes
  <paul@wolfbone.ath.cx> in bug 166015

*quack-0.29 (08 Feb 2007)

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org> -quack-0.22.ebuild,
  -quack-0.25.ebuild, +quack-0.29.ebuild:
  clean up a bit; version bump: change compression format from tar.gz to
  tar.bz2, remove virtual/emacs from DEPEND, adjust DESCRIPTION

*quack-0.28 (06 Mar 2006)

  06 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org> +quack-0.28.ebuild:
  New upstream version; Resolves Bug #113207.

  28 Aug 2005; Olivier Crête <tester@gentoo.org> quack-0.25.ebuild:
  Marked ~amd64, thanks to AT AJ Armstrong <aja@gentoo.org> for testing

  04 Jun 2005; Tobias Scherbaum <dertobi123@gentoo.org> quack-0.25.ebuild:
  Added ~ppc keyword.
  Thanks to Jonas Geiregat in #94853.

*quack-0.25 (11 Jul 2004)

  11 Jul 2004; <mkennedy@gentoo.org> +quack-0.25.ebuild:
  New upstream version.

*quack-0.22 (31 Oct 2003)

  31 Oct 2003; <mkennedy@gentoo.org> metadata.xml, quack-0.22.ebuild:
  initial import. ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
