@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX 50quack-gentoo.el 479 RMD160 b0d5af46e391a90b03764c2e48ef9ace2209ce6c SHA1 32298dd546e8e0dc23432c743bfb44ed79e03ace SHA256 b558b91ccf6fd31b13852229ce3759f9889b15501eaff2cf6537fb6389e5bc82
 DIST quack-0.30.el.bz2 41912 RMD160 fb49c05ee48a35e219cbcb30f8307c1b41141c3c SHA1 069c1e8d9bceb95e533e82afa884810d952144e6 SHA256 ca421dbe46292249cd4d101387997873b5e4383f8538fb8227e3878435b10c78
+DIST quack-0.36.el.bz2 42631 RMD160 4951d694582ed8013b88503900983527a18f37cd SHA1 5b7ba2547a657716dc6ea2efb908fe89a6fcfee9 SHA256 e566f7ffa45527d7179187e34c06e65a8970641777eeb4bbb9098b258d0bfb10
 EBUILD quack-0.30.ebuild 449 RMD160 eba44d16aaac2e5aae9b24ba80033f6f3fa59845 SHA1 2882f42d0686e3f8e7f2e73cf5e25c55ca4dcb2e SHA256 fe8db98b779cab62f0601295e80c641768cf951058aab4911474d25ec0d9be6f
-MISC ChangeLog 1896 RMD160 892f057d3d3f8ac695f6514a44528c4fcca3777f SHA1 75dc5f0415aad54ba6b1444347d8b97393ee0182 SHA256 f600539e862f188fed5f55304b2ce19aba6464c3ee555eef7b6b5f1ca99325f6
+EBUILD quack-0.36.ebuild 451 RMD160 7a21d7db286f2de1e31862cb1e46b4bdbf9e144e SHA1 59498fa5f39c097addc49ed8d4b7c4d01e6a4a85 SHA256 bcad741e98cb3ffc142a59a275e19fec7cbdcf6ac3e45b8eb55c0e45a66b52c4
+MISC ChangeLog 2014 RMD160 d34fe0c942fffbbafa7fa85a5396ab338664dc92 SHA1 9b74ad2f109b77f272c631146d99ea62890c66e9 SHA256 07c9b17f0315d5db8a2dac766b22aee305aee5ce6920ac922dc4938e53df621d
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkmBWUkACgkQNQqtfCuFneNySwCgkfBz+pTveUAJEcOy+QlTghBi
-xeIAn17BLIy2lin7rHf9t0PMqC7tB2Z+
-=pyQE
+iEYEARECAAYFAkomsXEACgkQNQqtfCuFnePrsgCfaUueyuTl6Xju7KpL1cRKKXO1
+q6AAn3n4AqIf+CjXsiTiGRoWurRLgSUi
+=Ra+4
 -----END PGP SIGNATURE-----
